--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="#header" class="scrollto">Anyar</a></h1>
+      <h1 class="logo"><a href="#header" class="scrollto">Expansion</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="#header" class="logo scrollto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
