--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container d-flex align-items-center justify-content-between">
       <div class="contact-info">
         <ul>
-          <li><i class="icofont-envelope"></i><a href="mailto:contact@example.com">contact@example.com</a></li>
+          <li><i class="icofont-envelope"></i><a href="mailto:MOHAMMED ABDUL RASHEED <mohammed.mech09@gmail.com>">MOHAMMED ABDUL RASHEED <mohammed.mech09@gmail.com></a></li>
           <li><i class="icofont-phone"></i> +1 5589 55488 55</li>
           <li><i class="icofont-clock-time icofont-flip-horizontal"></i> Mon-Fri 9am - 5pm</li>
         </ul>
