--- a/index.html
+++ b/index.html
@@ -151,8 +151,12 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="">NDT Non Destructive Testing</a></h4>
+              <p class="description">*35 Days Duration for NDT Course
+                *NDT Level 1 & 2 Training & Certification as per ASNT
+                *Full Equipped Lab for Practicals
+                *Site Visit / Internship / Placements
+                *Best NDT Training In the Industry</p>
             </div>
           </div>
 
